cluster/homelab/ato-deckbuilder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ato-deckbuilder
  namespace: ato-deckbuilder
  labels:
    app: ato-deckbuilder-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ato-deckbuilder-web
  template:
    metadata:
      labels:
        app: ato-deckbuilder-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: app
          image: ghcr.io/locistar/ato-deckbuilder-web:latest # {"$imagepolicy": "flux-system:ato-deckbuilder"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ato-deckbuilder
  namespace: ato-deckbuilder
  labels:
    app: ato-deckbuilder-web
spec:
  selector:
    app: ato-deckbuilder-web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ato-deckbuilder-ingress
  namespace: ato-deckbuilder
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: OriginClusterIssuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ato-deckbuilder.com
      secretName: ato-deckbuilder-tls
  rules:
    - host: ato-deckbuilder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ato-deckbuilder
                port:
                  name: http
